BSD fixes #285: Add overflow to back of card if the description gets long.

--- a/stories/components/cards/cards.scss
+++ b/stories/components/cards/cards.scss
@@ -54,6 +54,10 @@
       left: units(3);
       right: units(3);
     }
+
+    div {
+      overflow-y: auto;
+    }
   }
 
   &:hover &__face--front {
